<resources>
    <string name="app_name">Soustenir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_partners">Partners</string>
    <string name="menu_recycle">Recycle Near You</string>
    <string name="menu_apply">Apply</string>
    <string name="menu_company">Clothing Companies</string>
    <string name="menu_review">Review</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="company_name_hint">Enter company name</string>
    <string name="company_address_hint">Enter company address</string>
    <string name="submit">Submit</string>
    <string name="company_url_hint">Enter company URL</string>
    <string name="description_hint">Review goes here</string>
    <string name="rating_hint">Enter rating</string>

    <string name="partner_name">Prof. John Doe</string>
    <string name="partner_description">A university professor in environmental sciences with extensive research on sustainable development and ecological conservation.</string>
    <string name="partner_image_description">Professor John Doe</string>


</resources>