<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.partners.PartnersFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#4CAF50">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imagePartner"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/rectangle_1"
                    android:contentDescription="@string/partner_image_description" />

                <TextView
                    android:id="@+id/textPartnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/partner_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:paddingTop="8dp" />

                <TextView
                    android:id="@+id/textPartnerDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/partner_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:paddingTop="4dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>